RESOLVED FIXED91811
[chromium] Don't display fullscreen button for video elements not containing video
https://bugs.webkit.org/show_bug.cgi?id=91811
Summary [chromium] Don't display fullscreen button for video elements not containing ...
Andrew Scherkus
Reported 2012-07-19 21:23:00 PDT
[chromium] Don't display fullscreen button for video elements not containing video
Attachments
Patch (1.47 KB, patch)
2012-07-19 21:23 PDT, Andrew Scherkus
no flags
Patch (2.25 KB, patch)
2012-07-19 21:26 PDT, Andrew Scherkus
no flags
Patch (89.08 KB, patch)
2012-07-31 18:13 PDT, Ami Fischman
webkit.review.bot: commit-queue-
Andrew Scherkus
Comment 1 2012-07-19 21:23:31 PDT
Andrew Scherkus
Comment 2 2012-07-19 21:26:19 PDT
Andrew Scherkus
Comment 3 2012-07-20 15:46:54 PDT
thanks!
Andrew Scherkus
Comment 4 2012-07-20 16:06:46 PDT
Ami Fischman
Comment 5 2012-07-31 18:13:41 PDT
Reopening to attach new patch.
Ami Fischman
Comment 6 2012-07-31 18:13:43 PDT
WebKit Review Bot
Comment 7 2012-07-31 20:43:15 PDT
Comment on attachment 155695 [details] Patch Rejecting attachment 155695 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ts/svn-apply', u'--force']" exit_code: 9 cwd: /mnt/git/webkit-commit-queue/ Parsed 8 diffs from patch file(s). patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. Original content of LayoutTests/platform/chromium-linux/media/media-document-audio-repaint-expected.png mismatches at /mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply line 265. Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force']" exit_code: 9 cwd: /mnt/git/webkit-commit-queue/ Full output: http://queues.webkit.org/results/13418017
Ami Fischman
Comment 8 2012-07-31 20:52:03 PDT
Silvia Pfeiffer
Comment 9 2012-08-06 21:12:56 PDT
(Just adding the link to the meta bug.)
Note You need to log in before you can comment on or make changes to this bug.