[chromium] Don't display fullscreen button for video elements not containing video https://bugs.webkit.org/show_bug.cgi?id=91811

Reviewed by Eric Carlson.

Covered by media/media-document-audio-repaint.html

* html/shadow/MediaControlRootElementChromium.cpp:
(WebCore::MediaControlRootElementChromium::reset):

Canonical link: https://commits.webkit.org/109726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123272 268f45cc-cd09-0410-ab3c-d52691b4dbfc